Jan 19, 2006

  * TS: Removed operator declaration for '::'. No longer used.

Dec 23, 2005

  * TS: Removed chr_constraints declaration again, in favor
	of only the chr_constraint declaration and modified
	documentation accordingly.
  * TS: Modified documentation based on recommendations of Bart Demoen.
  * TS: Added chr_info/3 predicate to chr_compiler_errors, as suggested by
	Jon Sneyers. Now print banner on calling compiler.

Dec 13, 2005

  * TS: warnings are now written to user_error stream.

Dec 12, 2005

  * TS: option and constraints declarations are now deprecated. They
        are replaced by chr_option and chr_constraint(s).
  * TR: Made an interface for warnings and errors. Errors now implemented
        with exceptions.
  * TR: Revised documentation.

Dec 2, 2005
  * BD: chr_translate.chr, chr_translate_bootstrap2.chr
	   mutables "abstracted"
  * BD: chr_translate_bootstrap1.chr
	   atomic_concat - some duplicate code of it is in more than one file :-(
	   create_get_mutable definitions if-deffed
	   verbosity_on/0 for porting
	hprolog.pl
	   definitions of init_store/2, get_store/2, update_store/2
	   and of make_init_store_goal/make_get_store_goal/make_update_store_goal
	   removed prolog_flag/3 (seemed  nowhere used)
	chr_translate_bootstrap2.chr
	   make_init_store_goal/make_get_store_goal/make_update_store_goal introduced
	   verbosity_on/0 for porting
	chr_translate_bootstrap.pl
	   atom_concat -> atomic_concat
	   verbosity_on/0 for porting
	   conditional import van library(terms)
	chr_translate.chr
	   make_init_store_goal etc. introduced
	create_get_mutable_ref wherever needed (chr_translate*)


Nov 30, 2005
  * BD: chr_runtime.pl:
           chr_init for SICStus
           included contents of chr_debug.pl
           removed show_store/1
           create_mutable changed into 'chr create_mutable'
           got rid of explicit inlining and did it by goal expansion
           inlining also of 'chr default_store'
  * BD: chr_swi.pl: